--- a/roles/refresh-mssql-db-role/refresh-mssql-db-role.yml
+++ b/roles/refresh-mssql-db-role/refresh-mssql-db-role.yml
@@ -2,7 +2,7 @@
   vars:
     mssql_src_db_instance: win02
     mssql_dst_db_instance: win03
-    mssql_src_db_name: AdventureWorks
+    mssql_src_db_name: AdventureWorks2019
     mssql_dst_db_name: AdventureWorks_DEV
     mssql_fileshare_path: \\win03\MSSQLBackup
   roles:
